# ZHacks

./: README.md  build.gradle  settings.gradle
.github/workflows/: Builder.yml  Test.yml
app/: build.gradle
app/src/androidTest/java/zygisk/android/hack/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/zygisk/android/hack/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/zygisk/android/hack/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/magisk/: module.prop
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
